--- a/css2/booking.css
+++ b/css2/booking.css
@@ -58,9 +58,62 @@ ul li a{
 }
 .form1{
     width: 50%;
-    height: 80%;
+    height: 85%;
     border: 5px solid black;
     position: relative;
-    left: 15%;
+    left: 23%;
     top: 10%;
+    display: grid;
+    grid-template-columns: 1.5fr 3fr;
+}
+.side{
+    background-color: aquamarine;
+   
+
+}
+.side2{
+    background-color: rgb(96, 29, 113);
+  
+}
+.pay1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pay2{
+    display: flex;
+ 
+    align-items: center;
+    position: relative;
+    left: 190px;
+  
+}
+#mm{
+    width: 50px;
+}
+#yy{
+    width: 50px;
+}
+.pay3{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.upi{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input{
+    width: 150px;
+    height: 30px;
+}
+.payonline{
+    width: 20%;
+    height: 44px;
+    background-color: aqua;
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
+    padding: 10px 0px;
 }
