--- a/css2/ground1.css
+++ b/css2/ground1.css
@@ -54,7 +54,7 @@ ul li a{
         
     }
     .main2{
-        height: 105vh;
+        height: 120vh;
         border:20px solid transparent;
         border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
         
@@ -68,44 +68,47 @@ ul li a{
             grid-column-gap: 20px;
         }
         .sidebar1{ 
-            background-color:rgba(212, 212, 222, 0.2);
-            color: rgb(23, 17, 17);
+            background-color:rgba(41, 38, 196, 0.2);
+            color: white;
             margin:10px 10px;
            
-            height: 95vh; 
+            height: 99vh; 
     
         }
         .sidebar2{
-            background-color: rgba(232, 224, 232, 0.2);
+            background-color: rgba(214, 31, 218, 0.2);
             color: white;  
             margin:10px 10px;  
             border-radius: 0%; 
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 95vh;
+            height: 99vh;
         }
     .box1{
-        color: rgb(21, 130, 67);
+        color: rgb(21, 76, 130);
     }
     /* slider */
- 
+
     .containerslider{
-        width: 530px;
+        width: 520px;
        overflow: hidden;
-       margin-left: 10%;
+       position: relative;
+       left: 90px;
+       top: 30px;
     }
     .images{
         display: flex;
+     
         height: 350px;
-        border: 5px solid rgb(229, 222, 222);
-        border-radius: 2px;
+        position: relative;
+      
 
     }
     .images img{
         height: 350px;
-        width: 103%;
-        transition: all 0.5s ease;
+        width: 100%;
+        /* transition: all 0.5s ease; */
     }
     .images input{
         display: none;
@@ -148,15 +151,14 @@ ul li a{
         
      }
      .fa-table-tennis-paddle-ball,.material-symbols-outlined{
-        color: rgb(17, 16, 16);
-    font-size:190%;
-    }
+    color: rgb(16, 17, 17);
+font-size:190%;
+}
     .booking1{
         width: 450px;
         height: 650px;
-        background-color: rgb(36, 164, 48);
+        background-color: rgb(200, 206, 206);
         box-shadow: 0 10px 10px rgba(85, 6, 138, 0.23);
-        margin-bottom: 13%;
     }
     .timings{
         width: 50%;
@@ -210,6 +212,15 @@ ul li a{
         justify-content: center;
         padding: 10px 0px;
 
+     }
+     .addplayers{
+        width: 30%;
+        height: 44px;
+        background-color: rgb(14, 225, 81);
+        font-size: 17px;
+        display: flex;
+        justify-content: center;
+        padding: 10px 0px;
      }
 
        
