--- a/assets/css/bookground.css
+++ b/assets/css/bookground.css
@@ -4,7 +4,8 @@
     padding:0px;
 }
 header{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
     height: 10vh;
     background-position: center;
     background-size: cover;
@@ -51,9 +52,10 @@ ul li a{
 }
 #main1{
     height: 20vh;
-    border:20px solid transparent;
+    /* border:20px solid transparent;
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
-    
+     */
+     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
    
     
     }
@@ -61,11 +63,13 @@ ul li a{
         text-align: center;
         font-size: xx-large;
         font-weight:bolder;
+        color: white;
         
     }
     .cont2{
         display: flex;
         justify-content: center;
+        color: white;
     }
     .cont3{
         background-color: rgb(2, 2, 45);
@@ -96,6 +100,7 @@ border-radius: 2%;
 }  
 input[type="search"]::placeholder{
     font-size: 130%;
+    color: white;
  
 } 
 #search2{
@@ -104,13 +109,16 @@ input[type="search"]::placeholder{
     border: none;
     outline: none;
     padding: 20px 20px;
+    color: white;
 
 }
 .fa-location-dot{
     font-size: 170%;
+    color: white;
 }
 .fa-magnifying-glass{
     font-size:150%;
+    color: white;
 }
 .fa-user{
     font-size: xx-large;
@@ -144,8 +152,8 @@ input[type="search"]::placeholder{
     
     height: 7vh;
     
-    border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
+    /* border:20px solid transparent;
+    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
@@ -160,7 +168,7 @@ input[type="search"]::placeholder{
     width: 15%;
     
     border-radius: 2%;
-    background: linear-gradient(90deg, rgb(118, 118, 234) 4%, rgb(96, 33, 110) 100%);
+    background: linear-gradient(90deg, rgb(3, 3, 6) 4%, rgb(17, 4, 20) 100%);
     box-shadow: 0 10px 10px rgba(16, 3, 3, 0.23);
   position: relative;
   top: 10px;
@@ -171,10 +179,10 @@ input[type="search"]::placeholder{
 }
 .city{
     height: 10vh;
-    border:20px solid transparent;
+   
     
-    border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
+    /* border:20px solid transparent;
+    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
 
    
     font-size: 270%;
@@ -191,8 +199,8 @@ input[type="search"]::placeholder{
     
     height: 280vh;
 
-    border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
+    /* border:20px solid transparent;
+    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
 
 
     
@@ -220,11 +228,19 @@ input[type="search"]::placeholder{
     display: flex;
     flex-direction:column;
     align-items: center;
+    cursor: pointer;
+    
+}
+.child1:hover{
+    background-color: black;
+    transition: 2s;
+    transform:scale(1);
+	border:3px solid rgb(18, 174, 109);
 }
 .gro{
     width: 90%;
     border-radius: 2%;
-    border:10px solid transparent;
+    border:2px solid transparent;
     border-image: linear-gradient(90deg, rgb(11, 11, 11) 4%, rgb(14, 16, 16) 100%)60;
    
 
@@ -279,11 +295,14 @@ align-items: flex-end;
 footer{
     height: 30vh;
   
-    border:50px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)50;
-    
+    /* border:50px solid transparent;
+    border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16) ;
+     */
     background-position: center;
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
     background-size: cover;
+    color: white;
     
 }
 .row{
@@ -293,7 +312,7 @@ footer{
 
 }
 .footh{
-    color: black;
+    color: rgb(219, 213, 213);
     font-size: larger;
     font-weight: bold;
    
@@ -309,7 +328,7 @@ ol p{
 ol p a{
     text-decoration: none;
     font-size:medium;
-    color: rgb(18, 5, 5);
+    color: rgb(219, 213, 213);
     line-height: 1.6;
 }
 .fa-brands{
