--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -5,70 +5,40 @@
 }
 header{
     background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%);
-    height: 8vh;
+    height: 100vh;
     background-position: center;
     background-size: cover;
+    background-image: url(/assets/images/onlinepayback.jpg);
+    
  
 }
-ul{
-    display: flex;
-    justify-content:end;
-    margin-right: 2%;
-}
-ul li{
-    list-style-type: none;
-    padding: 2%;
- 
-}
-ul li a{
-    text-decoration: none;
-    font-size: larger;
-    color: white;
-}
 
-.login{
-  font-size: medium;
-  padding: 5px 15px;
-  height: 113%;
-  width: 102%;
-  background-color: rgb(5, 34, 120);
-  color: white;
-  position: relative;
-  bottom: 15%;
-  font-weight: bold;
-  cursor: pointer;
-  border: none;
-  
 
-}
-.logo{
-    width:14%;
-    position: relative;
-    bottom: 80px;
-}
 .main{
+    position: relative;
+    top: 150px;
+    left: 0px;
+    padding-left: 310px;
   
-        height: 87vh;
-        border:20px solid transparent;
-        border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
+       
         
        
         
         
 }
 .form1{
-    width: 50%;
-    height: 85%;
+    width: 70%;
+    height: 680px;
     border: 5px solid black;
     position: relative;
-    left: 23%;
-    top: 10%;
-    display: grid;
-    grid-template-columns: 1.5fr 3fr;
+    left: 2%;
+    bottom: 25px;
+    /* display: grid;
+    grid-template-columns: 1.5fr 3fr; */
 }
 .side{
-    background-color: rgb(222, 234, 230);
-   
+    /* background-color: rgba(0,0,0,0.5); */
+     
          
    
 
@@ -79,7 +49,10 @@ ul li a{
   
 }
 .side2{
-    background-color: rgb(255, 255, 255);
+   
+    background-color: rgba(0,0,0,0.5);
+    color: rgb(239, 239, 239);
+   height: 680px;
   
 }
 .pay1{
@@ -89,22 +62,27 @@ ul li a{
 }
 .pay2{
     display: flex;
+   justify-content:center ;
  
-    align-items: center;
-    position: relative;
-    left: 150px;
+ 
+
   
 }
 #mm{
     width: 50px;
+    position: relative;
+    right: 20px;
 }
 #yy{
     width: 50px;
+    position: relative;
+    left: 20px;
 }
 .pay3{
     display: flex;
     flex-direction: column;
     align-items: center;
+   
 }
 .upi{
     display: flex;
@@ -116,7 +94,7 @@ input{
     height: 30px;
 }
 .payonline{
-    width: 20%;
+    width: 290%;
     height: 44px;
     background-color: rgb(38, 211, 22);
     font-size: 17px;
@@ -124,4 +102,11 @@ input{
     justify-content: center;
     padding: 10px 0px;
     cursor: pointer;
+    position:relative;
+    right: 30px;
+    
+
+}
+a{
+    text-decoration: none;
 }
