--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -57,13 +57,14 @@ input[type="button"]::placeholder{
     
 }
 #login{
-    width: 80%;
+    width: 100%;
     height: 45px;
     font-size: large;
     font-weight: bolder;
     cursor: pointer;
     background-color: rgb(27, 190, 27);
     color: white;
+    padding: 10px 70px;
     
 }
 .sign{
