--- a/assets/css/playerprofile.css
+++ b/assets/css/playerprofile.css
@@ -13,7 +13,10 @@ header{
 ul{
     display: flex;
     justify-content:end;
-    margin-right: 2%;
+    margin-right: 20%;
+    position: relative;
+    top: 30px;
+    
 }
 ul li{
     list-style-type: none;
@@ -34,7 +37,7 @@ ul li a{
   background-color: rgb(5, 34, 120);
   color: white;
   position: relative;
-  bottom: 15%;
+  bottom: 95px;
   font-weight: bold;
   cursor: pointer;
   border: none;
@@ -44,7 +47,7 @@ ul li a{
 .logo{
     width:14%;
     position: relative;
-    bottom: 90px;
+    bottom: 170px;
 }
 #main1{
     height: 5vh;
@@ -62,7 +65,7 @@ ul li a{
     }
    
     .cont2{
-        background-color: rgb(2, 2, 45);
+        background-color: rgb(206, 206, 227);
         border: 5px solid rgb(25, 11, 82);
         border-radius: 10%;
         width: 6%;
@@ -72,7 +75,7 @@ ul li a{
          align-items: center;
         margin-left: 92%;
        position: relative;
-       top: 14px;
+       bottom: 54px;
      
     
         
@@ -91,7 +94,7 @@ ul li a{
 
 .login2{
     font-size: medium;
-    padding: 0px 20px;
+    padding: 0px 0px;
     height: 100%;
     width: 100%;
     background-color: rgb(5, 120, 105);
@@ -136,11 +139,11 @@ ul li a{
     }
     .box1{
        
-            background-color: rgb(2, 2, 45);
-            border: 5px solid rgb(25, 11, 82);
+            background-color: rgb(9, 220, 223);
+            border: 1px solid rgb(25, 11, 82);
             border-radius: 10%;
-            width: 65%;
-            height: 490px;
+            width: 55%;
+            height: 450px;
             box-shadow: 0 10px 10px rgba(14, 1, 1, 0.23);
             display: flex;
             flex-direction: column;
@@ -157,24 +160,21 @@ ul li a{
     .playerinfo{
         color: black;
         width: 200px;
-        background-color: aqua;
+        background-color: rgb(208, 216, 216);
         padding: 10px 10px;
         position: relative;
         left: 135px;
         top: 20px;
     }
-    .fa-regular.fa-user{
-        font-size: 265px;
-        padding: 10px 10px;
-        border-radius: 5%;
-        color: rgb(12, 11, 11);
-        background-color: rgb(202, 200, 200);
+   .profilepic{
+    width: 170px;
+    position: relative;
+    top:30px;
+   }
       
-      position: relative;
-      top:20px;
-     
+  
        
-    }  
+    
     .profile{
         font-size: medium;
         padding: 9px 20px;
@@ -183,38 +183,42 @@ ul li a{
         cursor: pointer;
         border: none;
        margin-bottom: 5px;
+       position: relative;
+       top: 30px;
         
       
       }
     
     .container{
-        background-color: rgb(36, 17, 139);
+        background-color: rgb(14, 15, 71);
         width: 390px;
         height: 70vh;
         display: flex;
         flex-direction: column;
         box-shadow: rgba(11, 7, 7, 0.2);
         margin-bottom: 20%;
+        border-radius: 20px;
     }
     .top{
-        color:brown;
+        color:rgb(227, 13, 113);
         padding: 2%;
     }
     .main{
         flex: 1;
         color: aqua;
-        background-color: rgb(17, 139, 100);
+        background-color: rgb(31, 155, 209);
         padding: 20px 10px;
 
     }
     .messageto{
-        background-color: chartreuse;
+        background-color: rgb(10, 254, 63);
         color: black;
         width: fit-content;
         padding: 7px 15px;
+        margin-left: 13px;
     }
     .messagefrom{
-        background-color: rgb(0, 200, 255);
+        background-color: rgb(26, 229, 209);
         color: black;
         width: fit-content;
         padding: 7px 15px;
@@ -231,7 +235,7 @@ ul li a{
         outline: none;
     }
     form button{
-        background-color: aqua;
+        background-color: rgb(27, 238, 146);
         font-size: medium;
         border: none;
         outline: none;
