--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 }
 header{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
     height: 10vh;
     background-position: center;
     background-size: cover;
@@ -55,7 +55,7 @@ ul li a{
 
 #main1{
     height: 86vh;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(0, 212, 255) 4%, rgba(0,212,255,1) 100%);
     display: flex;
     align-items: center;
     
@@ -75,22 +75,24 @@ ul li a{
     height: 70vh;
     display: flex;
     justify-content: space-evenly;
-    border:50px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
-    
+    /* border:50px solid transparent;
+    border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16);
+      */
+      background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
 }
 .box1{
     width: 23%;
     height: 82%;
     margin-top: 3%;   
     border-radius: 2%;
-    background: linear-gradient(90deg, rgb(114, 107, 244) 4%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(13, 142, 202) 4%, rgb(18, 188, 231) 100%);
     box-shadow: 0 10px 10px rgba(15, 12, 12, 0.66);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
- 
+ color: white;
     
 } 
 
@@ -107,7 +109,7 @@ ul li a{
     color:white;
     font-size:130%;
     position: relative;
-    left: 5%;
+    left: 0%;
    
 
 
@@ -156,28 +158,35 @@ font-size:200%;
     height: 55vh;
     display: flex;
     justify-content: space-evenly;
-    border:50px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)50;
-    
-    
+    /* border:50px solid transparent;
+    border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16);
+     */
+     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
 }
 #review{
     height: 60vh;
     display: flex;
     justify-content: space-evenly;
-    border:50px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)50;
-  
-    
+    /* border:50px solid transparent;
+    border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16);
+     */
+     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
+   
+   
 }
 footer{
     height: 30vh;
   
-    border:50px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)50;
-    
+    /* border:50px solid transparent;
+    border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16) ;
+     */
     background-position: center;
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
     background-size: cover;
+    color: white;
     
 }
 .row{
@@ -187,7 +196,7 @@ footer{
 
 }
 .footh{
-    color: black;
+    color: rgb(219, 213, 213);
     font-size: larger;
     font-weight: bold;
    
@@ -203,7 +212,7 @@ ol p{
 ol p a{
     text-decoration: none;
     font-size:medium;
-    color: rgb(18, 5, 5);
+    color: rgb(219, 213, 213);
     line-height: 1.6;
 }
 .fa-brands{
@@ -232,7 +241,7 @@ a{
     height: 80%;
     margin-top: 3%;   
     border-radius: 2%;
-    background: linear-gradient(90deg, rgb(228, 228, 238) 4%, rgb(180, 191, 194) 100%);
+    background: linear-gradient(90deg, rgb(129, 200, 231) 4%, rgb(180, 191, 194) 100%);
     box-shadow: 0 10px 10px rgba(15, 12, 12, 0.66);
     display: flex;
     flex-direction: column;
@@ -253,7 +262,7 @@ a{
     height: 60%;
     margin-top: 3%;   
     border-radius: 2%;
-    background: linear-gradient(90deg, rgb(45, 45, 45) 4%, rgb(0, 0, 0) 100%);
+    background: linear-gradient(90deg, rgb(58, 163, 192) 4%, rgb(240, 232, 232) 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
