--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -262,20 +262,20 @@ font-size:190%;
         justify-content: space-between;
      }
      .pay{
-        width: 90;
+        width: 90%;
         height: 44px;
         background-color: rgb(7, 228, 129);
         font-size: 17px;
         display: flex;
         justify-content: center;
-        padding: 10px 0px;
+        padding: 0px 0px;
         border: none;
         cursor: pointer;
         
         
      }
      .paycash{
-        width: 30%;
+        width: 100%;
         height: 44px;
         background-color: rgb(11, 220, 137);
         font-size: 17px;
@@ -283,16 +283,18 @@ font-size:190%;
         justify-content: center;
         padding: 10px 0px;
         border: none;
+        cursor: pointer;
 
      }
      .addplayers{
-        width: 30%;
+        width: 100%;
         height: 44px;
         background-color: rgb(14, 225, 81);
         font-size: 17px;
         display: flex;
         justify-content: center;
-        padding: 10px 0px;
+        padding: 10px 10px;
+        cursor: pointer;
      }
   
 
