--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -8,7 +8,7 @@ header{
     height: 100vh;
     background-position: center;
     background-size: cover;
-    background-image: url(/assets/images/onlinepayback.jpg);
+    background-image: url(../../assets/images/onlinepayback.jpg);
     
  
 }
