--- a/assets/css/findplayers.css
+++ b/assets/css/findplayers.css
@@ -4,7 +4,8 @@
     padding:0px;
 }
 header{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
     height: 10vh;
     background-position: center;
     background-size: cover;
@@ -49,9 +50,11 @@ ul li a{
 
 #main1{
     height: 15vh;
-    border:20px solid transparent;
+    /* border:20px solid transparent;
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
-    
+     */
+     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
    
     
     }
@@ -59,11 +62,13 @@ ul li a{
         text-align: center;
         font-size: xx-large;
         font-weight:bolder;
+        color: white;
         
     }
     .cont2{
         display: flex;
         justify-content: center;
+        color: white;
     }
     .cont3{
         background-color: rgb(2, 2, 45);
@@ -96,6 +101,7 @@ ul li a{
   
 input[type="search"]::placeholder{
     font-size: 130%;
+    color: white;
  
 } 
 #search2{
@@ -104,11 +110,13 @@ input[type="search"]::placeholder{
     border: none;
     outline: none;
     padding: 20px 20px;
+    color: white;
 
 }
 
 .fa-magnifying-glass{
     font-size:150%;
+    color: white;
 }
 .fa-user{
     font-size: xx-large;
@@ -116,12 +124,13 @@ input[type="search"]::placeholder{
     color: white;
    
 }  
-.search3{
+.searchbtn{
     background: transparent;
    cursor: pointer;
     border: none;
     outline: none;
     padding: 0px 20px;
+    color: white;
 
 }  
 .login2{
@@ -140,10 +149,10 @@ input[type="search"]::placeholder{
   }
   .main2{
     height: 300vh;
-    border:20px solid transparent;
+    /* border:20px solid transparent;
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
     border-radius: 0px;
-   
+    */
     
     }
     .parent{
@@ -190,59 +199,65 @@ input[type="search"]::placeholder{
         font-size: 20px;
     }
     /* footer */
-    footer{
-        height: 30vh;
-      
-        border:50px solid transparent;
-        border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)50;
-        
-        background-position: center;
-        background-size: cover;
-        
-    }
-    .row{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+footer{
+    height: 30vh;
+  
+    /* border:50px solid transparent;
+    border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16) ;
+     */
+    background-position: center;
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
+    background-size: cover;
+    color: white;
     
-    }
-    .footh{
-        color: black;
-        font-size: larger;
-        font-weight: bold;
-       
-    }
-    .column1{
-        margin-top: 2%;
-    }
-    ol p{
-        list-style-type: none;
-        
-     
-    }
-    ol p a{
-        text-decoration: none;
-        font-size:medium;
-        color: rgb(18, 5, 5);
-        line-height: 1.6;
-    }
-    .fa-brands{
-        font-size:x-large;
-        padding: 1.5%;
-    }
-    .fa-facebook{
-        color: #3b5998  ;
-    }
-    .fa-twitter{
-        color: #00acee;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+.footh{
+    color: rgb(219, 213, 213);
+    font-size: larger;
+    font-weight: bold;
+   
+}
+.column1{
+    margin-top: 2%;
+}
+p{
+    list-style-type: none;
     
-    }
-    .fa-instagram{
-    
-    }
-    .fa-linkedin{
-     color: #0A66C2;
-    
-    }
-    /* footer */
-    
+ 
+}
+p a{
+    text-decoration: none;
+    font-size:medium;
+    color: rgb(219, 213, 213);
+    line-height: 1.6;
+}
+.fa-brands{
+    font-size:x-large;
+    padding: 1.5%;
+}
+.fa-facebook{
+    color: #3b5998  ;
+}
+.fa-twitter{
+    color: #00acee;
+
+}
+.fa-instagram{
+
+}
+.fa-linkedin{
+ color: #0A66C2;
+
+}
+a{
+    text-decoration: none;
+}
+/* footer */
+ 
