--- a/assets/css/groundinfo.css
+++ b/assets/css/groundinfo.css
@@ -4,7 +4,7 @@
     padding:0px;
 }
 header{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
     height: 8vh;
     background-position: center;
     background-size: cover;
@@ -55,9 +55,9 @@ ul li a{
     }
     .main2{
         height: 125vh;
-        border:20px solid transparent;
+        /* border:20px solid transparent;
         border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
-        
+         */
        
         
         }
@@ -300,60 +300,65 @@ font-size:190%;
 
      
      /* footer */
-     footer{
-        height: 30vh;
-      
-        border:20px solid transparent;
-        border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)50;
-        
-        background-position: center;
-        background-size: cover;
-        
-    }
-    .row{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+footer{
+    height: 30vh;
+  
+    /* border:50px solid transparent;
+    border-image: linear-gradient(90deg, rgb(226, 233, 234) 4rgb(219, 221, 222)16) ;
+     */
+    background-position: center;
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
+   
+    background-size: cover;
+    color: white;
     
-    }
-    .footh{
-        color: black;
-        font-size: larger;
-        font-weight: bold;
-       
-    }
-    .column1{
-        margin-top: 2%;
-    }
-    ol p{
-        list-style-type: none;
-        
-     
-    }
-    ol p a{
-        text-decoration: none;
-        font-size:medium;
-        color: rgb(18, 5, 5);
-        line-height: 1.6;
-    }
-    .fa-brands{
-        font-size:x-large;
-        padding: 1.5%;
-    }
-    .fa-facebook{
-        color: #3b5998  ;
-    }
-    .fa-twitter{
-        color: #00acee;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+.footh{
+    color: rgb(219, 213, 213);
+    font-size: larger;
+    font-weight: bold;
+   
+}
+.column1{
+    margin-top: 2%;
+}
+ p{
+    list-style-type: none;
     
-    }
-    .fa-instagram{
-    
-    }
-    .fa-linkedin{
-     color: #0A66C2;
-    
-    }
-    a{
-        text-decoration: none;
-    }
+ 
+}
+p a{
+    text-decoration: none;
+    font-size:medium;
+    color: rgb(219, 213, 213);
+    line-height: 1.6;
+}
+.fa-brands{
+    font-size:x-large;
+    padding: 1.5%;
+}
+.fa-facebook{
+    color: #3b5998  ;
+}
+.fa-twitter{
+    color: #00acee;
+
+}
+.fa-instagram{
+
+}
+.fa-linkedin{
+ color: #0A66C2;
+
+}
+a{
+    text-decoration: none;
+}
+/* footer */
+ 
