--- a/assets/css/playerprofile.css
+++ b/assets/css/playerprofile.css
@@ -4,7 +4,7 @@
     padding:0px;
 }
 header{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
     height: 15vh;
     background-position: center;
     background-size: cover;
@@ -51,10 +51,10 @@ ul li a{
 }
 #main1{
     height: 5vh;
-    border:20px solid transparent;
+    /* border:20px solid transparent;
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
     
-   
+    */
     
     }
     .cont1{
@@ -108,9 +108,9 @@ ul li a{
   }
   .main2{
     height: 87vh;
-    border:20px solid transparent;
+    /* border:20px solid transparent;
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60;
-    
+     */
    
     
     }
