--- a/assets/css/bookground.css
+++ b/assets/css/bookground.css
@@ -3,6 +3,7 @@
     margin:0px;
     padding:0px;
 }
+/* header */
 header{
     background: linear-gradient(90deg, rgb(10, 9, 20) 4%, rgb(16, 18, 19) 100%);
    
@@ -50,6 +51,8 @@ ul li a{
 .player1{
     width: 60%;
 }
+/* header */
+/* main1 */
 #main1{
     height: 20vh;
     /* border:20px solid transparent;
@@ -59,17 +62,18 @@ ul li a{
    
     
     }
-    .cont1{
+    .content1{
         text-align: center;
         font-size: xx-large;
         font-weight:bolder;
         color: white;
         
     }
-    .cont2{
+    .content2{
         display: flex;
         justify-content: center;
         color: white;
+    
     }
     .cont3{
         background-color: rgb(2, 2, 45);
@@ -87,7 +91,7 @@ ul li a{
     
         
     }
-#searchnav{
+.searchnav{
 width: 80%;
 height: 6vh;
 max-width: 35%;
@@ -95,6 +99,7 @@ background:rgba(67, 67, 57, 0.1);
 display: flex;
 justify-content: center;
 border-radius: 2%;
+border: 2px solid white;
 
 
 }  
@@ -148,67 +153,83 @@ input[type="search"]::placeholder{
     
   
   }
-#main2{
-    
-    height: 7vh;
-    
-    /* border:20px solid transparent;
-    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
- display: flex;
- flex-direction: row;
- flex-wrap: wrap;
- justify-content:space-between;
- padding: 20px 20px;
-
-    
-
-}
-
-.box1{
-    width: 15%;
-    
-    border-radius: 2%;
-    background: linear-gradient(90deg, rgb(3, 3, 6) 4%, rgb(17, 4, 20) 100%);
-    box-shadow: 0 10px 10px rgba(16, 3, 3, 0.23);
-  position: relative;
-  top: 10px;
-  padding: 10px 2px;
-  
-   
- 
-}
-.city{
+  /* main1 */
+  /* city */
+  .city{
     height: 10vh;
-   
+    background: linear-gradient(90deg, rgb(0, 212, 255) 4%, rgba(0,212,255,1) 100%);
     
     /* border:20px solid transparent;
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
 
    
     font-size: 270%;
-    color: rgb(10, 1, 1);
+    color: rgb(224, 219, 219);
     text-align: center;
     font-weight: bolder;
 }
-.locat{
+/* city */
+/* main2 */
+#main2{
+    
+    height: 7vh;
+    
+    /* border:20px solid transparent;
+    border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
+ /* display: flex;
+ flex-direction: row;
+ flex-wrap: wrap;
+ justify-content:space-between; */
+ padding: 20px 20px;
+ display: grid;
+ grid-template-columns: 1fr 1fr 1fr;
+ grid-column-gap: 110px;
+ background-color: rgba(11, 194, 215, 0.943);
+
+    
+
+}
+
+/* .placesbox{
+    margin-left: 90px;
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr ;
+   grid-column-gap: 200px;
+
+} */
+.box1{
+    width: 75%;
+    
+    border-radius: 2%;
+    background: linear-gradient(90deg, rgb(3, 3, 6) 4%, rgb(17, 4, 20) 100%);
+    box-shadow: 0 10px 10px rgba(16, 3, 3, 0.23);
+  position: relative;
+  top: 10px;
+  padding: 10px 1px;
+  margin-left:13%;
+  
+   
+ 
+}
+
+.locate{
     font-size: 170%;
     color: white;
     text-align: center;
 }
+/* main2 */
+/* main3 */
 .main3{
     
     height: 280vh;
 
     /* border:20px solid transparent;
     border-image: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(0,212,255,1) 100%)60; */
-
-
+    background: linear-gradient(90deg, rgb(0, 212, 255) 4%, rgba(0,212,255,1) 100%);
+overflow: hidden;
     
 }
-.fa-star{
-    color: goldenrod;
-    font-size: 20px;
-}
+
 .parent{
     margin: 20px;
     display: grid;
@@ -237,7 +258,7 @@ input[type="search"]::placeholder{
     transform:scale(1);
 	border:3px solid rgb(18, 174, 109);
 }
-.gro{
+.groimg{
     width: 90%;
     border-radius: 2%;
     border:2px solid transparent;
@@ -246,11 +267,11 @@ input[type="search"]::placeholder{
 
     
 }
-.gn{
+.groundn{
   color:rgb(27, 25, 25);
 
 }
-.ln{
+.locationn{
     color:rgb(23, 21, 21);
     font-size: larger;
     font-weight: 900;
@@ -291,6 +312,11 @@ align-items: flex-end;
   top:90%;
     
 }
+.fa-star{
+    color: goldenrod;
+    font-size: 20px;
+}
+/* main3 */
 /* footer */
 footer{
     height: 30vh;
